--- a/app/src/main/res/layout/crop_estimate_list_card.xml
+++ b/app/src/main/res/layout/crop_estimate_list_card.xml
@@ -4,51 +4,16 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <LinearLayout
         android:orientation="vertical"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginLeft="6dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp">
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
 
 
-
-            <ImageView
-                android:id="@+id/img_crop_machine_card_delete"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginTop="2dp"
-                android:background="@drawable/ic_delete"
-                android:textSize="22dp" />
-
-
-            <ImageView
-                android:id="@+id/img_crop_machine_card_edit"
-                android:layout_width="25dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/arrow_right_gray"
-                android:textColor="@color/darker_gray"
-                android:textSize="22dp" />
-
-            <ImageView
-                android:id="@+id/img_crop_machine_card_more"
-                android:layout_width="25dp"
-                android:layout_height="match_parent"
-                android:backgroundTint="@color/black"
-                android:textColor="@color/darker_gray"
-                app:srcCompat="@drawable/more_options_icon" />
-
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,25 +37,53 @@
                     android:layout_marginTop="3dp">
 
                     <TextView
-                        android:id="@+id/txt_crop_customer_card_company"
-                        android:textSize="14dp"
+                        android:id="@+id/txt_crop_estimate_card_customer_name"
+                        android:textSize="14sp"
                         android:textColor="#696666"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
-                        android:text="Kiwanuka Farm Ltd" />
-
-
-
-                    <TextView
-
+                        android:text="Kleiner Parker Firm " />
+                    <LinearLayout
+                        android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="1/1 unpaid"
-                        android:textColor="#696666"
-                        android:textSize="14dp"
-                        android:gravity="end"
-                        android:layout_marginRight="25dp"/>
+                        android:gravity="right"
+                        android:layout_marginLeft="6dp"
+                        >
+
+
+
+                        <ImageView
+                            android:id="@+id/img_crop_product_card_delete"
+                            android:layout_width="25dp"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="2dp"
+                            android:background="@drawable/ic_delete"
+                            android:textSize="22dp" />
+
+
+                        <ImageView
+                            android:id="@+id/img_crop_product_card_edit"
+                            android:layout_width="25dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/arrow_right_gray"
+                            android:textColor="@color/darker_gray"
+                            android:textSize="22dp" />
+
+                        <ImageView
+                            android:id="@+id/img_crop_product_card_more"
+                            android:layout_width="25dp"
+                            android:layout_height="match_parent"
+                            android:backgroundTint="@color/black"
+                            android:textColor="@color/darker_gray"
+                            app:srcCompat="@drawable/more_options_icon" />
+
+
+                    </LinearLayout>
+
+
+
 
                 </LinearLayout>
 
@@ -102,35 +95,35 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+
                         android:layout_marginLeft="6dp"
                         android:layout_marginTop="3dp"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/txt_crop_customer_card_phone"
+                           android:id="@+id/txt_crop_estimate_card_estimate_number"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0700214672"
+                            android:text="EST-001"
                             android:textColor="#696666"
-                            android:textSize="14dp" />
-                        <TextView
-
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text=","
-                            android:textColor="#696666"
-                            android:layout_marginRight="5dp"
-                            android:layout_marginLeft="2dp"
-                            android:textStyle="bold"
                             android:textSize="14dp" />
 
                         <TextView
-                            android:id="@+id/txt_crop_customer_card_city_town"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:gravity="right"
                             android:layout_marginLeft="5dp"
-                            android:text="Masaka"
+                            android:text="UGX"
+                            android:textColor="#696666"
+                            android:textSize="14dp" />
+                        <TextView
+                            android:id="@+id/txt_crop_product_card_quantitty"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:text="300,000"
+                            android:layout_marginRight="10dp"
                             android:textColor="#696666"
                             android:textSize="14dp" />
 
@@ -147,36 +140,25 @@
                     android:layout_marginLeft="6dp"
                     android:layout_marginTop="3dp">
 
-
-
                     <TextView
-                        android:id="@+id/txt_crop_customer_card_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="John Kiwanuka"
+                        android:text="Ref # :"
                         android:textColor="#696666"
-
+                        android:textStyle="bold"
                         android:textSize="14dp" />
 
                     <TextView
-                        android:layout_width="192dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:text="UGX"
-                        android:textColor="#696666"
-                        android:textSize="14dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/txt_crop_machine_card_registration_number"
+                        android:id="@+id/txt_crop_estimate_card_reference_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="1762156000"
+                        android:text="123456 "
                         android:textColor="#696666"
-                        android:layout_marginRight="20dp"
-                        android:paddingLeft="0dp"
-                        android:textSize="14dp"
-                        android:gravity="end"/>
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:textSize="14dp" />
+
+
 
 
 
@@ -196,22 +178,24 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/txt_crop_estimate_card_estimate_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Due Payment :"
-                            android:textStyle="bold"
+                            android:text="08-03-2019"
+
                             android:textColor="#696666"
                             android:textSize="14dp" />
 
+
                         <TextView
-                            android:id="@+id/txt_crop_machine_card_storage_location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
+                            android:gravity="end"
                             android:layout_marginLeft="5dp"
-                            android:text="3-15-2018"
+                            android:text="INVOICED"
                             android:textColor="#696666"
-                            android:textSize="14dp" />
+                            android:textSize="14sp"
+                            android:textStyle="bold"/>
 
 
                     </LinearLayout>
@@ -220,10 +204,12 @@
                 </LinearLayout>
 
 
+
             </LinearLayout>
         </LinearLayout>
 
 
 
     </LinearLayout>
+
 </LinearLayout>
