--- a/app/src/main/res/layout/content_crop_products_list.xml
+++ b/app/src/main/res/layout/content_crop_products_list.xml
@@ -7,5 +7,18 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.CropProductsListActivity"
     tools:showIn="@layout/activity_crop_products_list">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/crop_product_recyc_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+    </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
