--- a/app/src/main/res/layout/crop_machine_list_card.xml
+++ b/app/src/main/res/layout/crop_machine_list_card.xml
@@ -6,6 +6,7 @@
 
     <LinearLayout
         android:orientation="vertical"
+        android:layout_margin="5dp"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
