--- a/app/src/main/res/layout/content_crop_inventory_list.xml
+++ b/app/src/main/res/layout/content_crop_inventory_list.xml
@@ -8,6 +8,14 @@
     tools:context=".activities.CropInventoryListActivity"
     tools:showIn="@layout/activity_crop_inventory_list">
 
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <Spinner
         android:id="@+id/select_inventory_spinner"
         android:layout_width="match_parent"
@@ -26,7 +34,7 @@
         android:id="@+id/inventory_recyc_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="192dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,5 +44,6 @@
         app:layout_constraintVertical_bias="0.0">
 
     </android.support.v7.widget.RecyclerView>
-
+    </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
