--- a/app/src/main/res/layout/content_crop_invoice_manager.xml
+++ b/app/src/main/res/layout/content_crop_invoice_manager.xml
@@ -16,7 +16,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -27,12 +28,13 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_weight="0.4"
+                        android:layout_margin="4dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -45,17 +47,17 @@
                             android:textStyle="bold" />
 
                         <Spinner
-                            android:id="@+id/txt_crop_invoice_customer_name"
+                            android:id="@+id/spinner_crop_invoice_customer_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/input_shapes"
                             android:textSize="14sp" />
                     </LinearLayout>
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        android:layout_margin="4dp"
+                        android:layout_weight="0.6"
                         android:orientation="vertical">
 
                         <TextView
@@ -71,22 +73,50 @@
                             android:id="@+id/txt_crop_invoice_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="0.4"
                             android:background="@drawable/input_shapes"
+                            android:inputType="none"
                             android:textSize="14sp" />
                     </LinearLayout>
-                </LinearLayout>
 
+
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="12dp"
                     android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="4dp"
+                        android:orientation="vertical">
 
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.6"
+                            android:text="@string/invoice_order_number"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <EditText
+                            android:id="@+id/txt_crop_invoice_order_number"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.4"
+                            android:background="@drawable/input_shapes"
+
+                            android:textSize="14sp" />
+                    </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
                         android:layout_weight="1"
+                        android:layout_margin="4dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -109,29 +139,59 @@
                             android:textSize="14sp" />
                     </LinearLayout>
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="12dp"
+                    android:orientation="horizontal">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_margin="4dp"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.6"
-                            android:text="@string/expiry_date"
+                            android:text="@string/invoice_terms_label"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <Spinner
+                            android:id="@+id/spinner_crop_invoice_terms"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/input_shapes"
+                            android:entries="@array/invoice_terms_list"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_margin="4dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.6"
+                            android:text="@string/due_date"
                             android:textColor="@color/colorPrimary"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <EditText
-                            android:id="@+id/txt_crop_invoice_expiry_date"
+                            android:id="@+id/txt_view_crop_invoice_due_date"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
-
                             android:background="@drawable/input_shapes"
-                            android:hint="Select"
                             android:inputType="none"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -278,10 +338,12 @@
                     android:id="@+id/btn_add_item"
                     style="@style/Button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="45dp"
+                    android:minWidth="1dp"
                     android:backgroundTint="@color/colorPrimary"
                     android:drawableLeft="@android:drawable/ic_input_add"
                     android:drawableTint="#ffffff"
+                    android:textSize="14sp"
                     android:text="@string/label_add_item"
                     android:textAllCaps="false"
                     android:textColor="#ffffff" />
@@ -316,7 +378,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="end"
-                        android:text="250,000" />
+                        android:text="@string/default_numeric_value" />
 
                 </LinearLayout>
 
@@ -347,6 +409,7 @@
 
 
                         <EditText
+                            android:id="@+id/txt_crop_invoice_discount_percentage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
@@ -384,7 +447,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="end"
-                            android:text="-10,000" />
+                            android:text="@string/default_numeric_value"/>
 
                     </LinearLayout>
                 </LinearLayout>
@@ -416,7 +479,7 @@
 
 
                         <EditText
-                            android:id="@+id/txt_crop_cultivate_fixed_cost"
+                            android:id="@+id/txt_crop_invoice_shipping_charge"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
@@ -438,11 +501,11 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/txt_crop_invoice_shipping_charges"
+                            android:id="@+id/txt_view_crop_invoice_shipping_charges"
                             android:layout_width="74dp"
                             android:layout_height="wrap_content"
                             android:gravity="end"
-                            android:text="50,000" />
+                            android:text="@string/default_numeric_value" />
 
                     </LinearLayout>
                 </LinearLayout>
@@ -471,11 +534,60 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="end"
-                        android:text="290,000" />
+                        android:text="@string/default_numeric_value" />
 
                 </LinearLayout>
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/btn_add_payment"
+                    style="@style/Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:minWidth="1dp"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:drawableLeft="@android:drawable/ic_input_add"
+                    android:drawableTint="#ffffff"
+                    android:textSize="14sp"
+                    android:text="Add Payment"
+                    android:textAllCaps="false"
+                    android:textColor="#ffffff" />
+                <LinearLayout
+                    android:id="@+id/layout_crop_invoice_payment_made"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:orientation="horizontal"
+
+                    android:visibility="gone">
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="40dp"
+                        android:text="@string/invoice_payments_made_lbl"
+
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:id="@+id/txt_crop_invoice_payment_made"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
+                        android:text="@string/default_numeric_value" />
+
+                </LinearLayout>
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -499,7 +611,7 @@
                     android:layout_height="80dp"
                     android:background="@drawable/input_shapes"
                     android:gravity="start"
-                    android:text="Enter.." />
+                    android:hint="Enter.." />
 
             </LinearLayout>
 
@@ -525,7 +637,7 @@
                     android:layout_height="80dp"
                     android:background="@drawable/input_shapes"
                     android:gravity="start"
-                    android:text="Enter.." />
+                    android:hint="Enter.." />
 
             </LinearLayout>
             <LinearLayout
