--- a/app/src/main/res/layout/crop_payments_list_card.xml
+++ b/app/src/main/res/layout/crop_payments_list_card.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="vertical"
         android:background="@color/white"
@@ -26,7 +26,7 @@
                 android:layout_marginTop="3dp">
 
                 <TextView
-                    android:id="@+id/txt_crop_payments_card_customer_name"
+                    android:id="@+id/txt_crop_payment_card_customer_name"
                     android:textSize="14sp"
                     android:textColor="#696666"
                     android:layout_width="wrap_content"
@@ -42,26 +42,8 @@
                     >
 
 
-
                     <ImageView
-                        android:id="@+id/img_crop_product_card_delete"
-                        android:layout_width="25dp"
-                        android:layout_height="20dp"
-                        android:layout_marginTop="2dp"
-                        android:background="@drawable/ic_delete"
-                        android:textSize="22dp" />
-
-
-                    <ImageView
-                        android:id="@+id/img_crop_product_card_edit"
-                        android:layout_width="25dp"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/arrow_right_gray"
-                        android:textColor="@color/darker_gray"
-                        android:textSize="22dp" />
-
-                    <ImageView
-                        android:id="@+id/img_crop_product_card_more"
+                        android:id="@+id/img_crop_payment_card_more"
                         android:layout_width="25dp"
                         android:layout_height="match_parent"
                         app:srcCompat="@drawable/more_options_icon" />
@@ -88,7 +70,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/txt_crop_payments_card_date"
+                        android:id="@+id/txt_crop_payment_card_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="08-03-2019"
@@ -105,7 +87,7 @@
                         android:textColor="#696666"
                         android:textSize="14dp" />
                     <TextView
-                        android:id="@+id/txt_crop_payments_card_amount"
+                        android:id="@+id/txt_crop_payment_card_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -139,7 +121,7 @@
                     android:textSize="14dp" />
 
                 <TextView
-                    android:id="@+id/txt_crop_payments_card_payment_number"
+                    android:id="@+id/txt_crop_payment_card_payment_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="001 "
@@ -151,7 +133,7 @@
 
 
                 <TextView
-                    android:id="@+id/txt_crop_payments_card_mode"
+                    android:id="@+id/txt_crop_payment_card_mode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
@@ -169,14 +151,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="6dp"
+                android:id="@+id/layout_crop_payment_card_invoice"
                 android:layout_marginTop="3dp">
 
 
                 <TextView
-                    android:id="@+id/txt_crop_payments_card_invoice_number"
+                    android:id="@+id/txt_crop_payment_card_invoice_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="INV-001"
+                    android:text=""
                     android:textColor="#696666"
                     android:textSize="14dp" />
 
