--- a/app/src/main/res/layout/crop_record_payment_received.xml
+++ b/app/src/main/res/layout/crop_record_payment_received.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="48dp"
     android:orientation="vertical">
 
     <ScrollView
@@ -17,6 +18,7 @@
 
 
         <LinearLayout
+            android:id="@+id/layout_record_payment_received_customer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -47,6 +49,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/layout_record_payment_received_invoice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -69,7 +72,6 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimary"
                 android:textSize="14sp"
-                android:entries="@array/crop_cultivate_operation"
                 android:background="@drawable/input_shapes"
 
                 />
@@ -96,7 +98,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/txt_crop_employee_first_name"
+                    android:id="@+id/txt_crop_record_payment_received_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -129,7 +131,7 @@
                     android:layout_weight="1"
                     />
 
-                <EditText
+                <TextView
                     android:id="@+id/txt_crop_record_payment_received_payment_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -265,6 +267,41 @@
                 android:background="@drawable/input_shapes"
                 android:hint="Enter.."
                 android:textSize="14sp"
+
+
+                />
+
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/notes"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                />
+
+
+
+
+            <EditText
+                android:id="@+id/txt_crop_record_payment_received_notes"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:background="@drawable/input_shapes"
+                android:hint="Enter.."
+                android:textSize="14sp"
+                android:gravity="start"
 
 
                 />
